Applied Tim Waugh's patch from bug #691171: A NULL check for the argument of TIFFCleanup was missing, which caused a segfault when opening the output device failed for any of the devices in gdevtfax.c.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10924 a1074d23-0009-0410-80fe-cf8c14f379e6